iam/deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #namespace: defi-portfolio-iam-ns
  name: defi-portfolio-iam-deployment
spec:
  selector:
    matchLabels:
      app: defi-portfolio-iam
  replicas: 1
  template:
    metadata:
      labels:
        app: defi-portfolio-iam
    spec:
      containers:
        - name: defi-portfolio-iam
          image: petergich/defi-portfolio-iam:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 500m # Desired CPU usage set to 0.5 CPU core
              memory: 256Mi
            limits:
              cpu: 1000m # Maximum CPU usage set to 1 CPU core
              memory: 512Mi # Maximum memory usage set to 512 MiB
