iam/deploy/k8s/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: defi-portfolio-iam-ns
  name: defi-portfolio-iam-service
spec:
  type: LoadBalancer
  selector:
    app: defi-portfolio-iam
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
