iam/deploy/k8s/ingress.yml
# You will have to use helm to install the ingress controller
# This uses K8s-NGINX ingress controller, but you can adapt it for other controllers.
# https://kubernetes.github.io/ingress-nginx/deploy/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: defi-portfolio-iam-ns
  name: defi-portfolio-iam-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: iam.yourdomain.com # Replace with domain
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: defi-portfolio-iam-service
            port:
              number: 8000
